# epd4in2v2-cpp

./: CMakeLists.txt  README.md
.github/workflows/: doxygen.yml
c/: Makefile
examples/: EPD_4in2_V2_test.c
inc/: DisplayApi.hpp  Gui.hpp
inc/clib/Fonts/: fonts.h
inc/clib/GUI/: GUI_BMPfile.h  GUI_Paint.h
scripts/: bmpDebug.py  bmpView.py  convertBitmap.sh  font-generator.py
scripts/output/: Arial80.c  ComicSansMS69.c  arial69.c
src/: CMakeLists.txt  DisplayApi.cpp  Gui.cpp  main.c  main.cpp
src/clib/Config/: dev_hardware_SPI.c  sysfs_software_spi.c
src/clib/Fonts/: BebasNeue66.c  ComicSansMS69.c  Tangerine60.c  arial48.c  arial70.c
src/clib/GUI/: GUI_BMPfile.c  GUI_Paint.c
